
- ZON-2252: Use product name instead of product id for indication of source

- ZON-2244: Fix indication of source in articles

- ZON-2218: Adjust timezone of displayed dates and fix indication of source

- ZON-2267: SEO pagetitle & -description shall trump anything else

- ZON-2266: Show empty buzzbox, if reach is down

- ZON-2259: Shorter caching for articles with unloadable comment thread

- FIX: total_pages TypeError (Bugsnag)

- CONFIG [hg only]: Change number of top-level-comments in config to 4


2.7 (2015-09-25)
----------------

- ZON-2074: Redirect `?commentstart` and `?page=all` to their proper locations

- FIX: Do not show article age on advertorial CP teasers

- FIX: Suppress `.cp2015` suffix in some more URLs


2.6 (2015-09-23)
----------------

- FIX: Repair video container and promote "separation of concerns"

- HOTFIX: Repair table of contents for more than 7 pages

- ZON-2258: Show only 5 top-level comments per page

- ZON-2251: Make columns paginate

- ZON-2098: Add quotes to article

- ZON-2224: Redirect repository root and folders to ~/index

- ZON-2255: Omit pagination postfix from wt content id

- ZON-2257: Update newsletter to use variant_url for images

- FIX: Add force-mobile to teaser-small-minor

- FIX: Handle empty commenter name gracefully

- FIX: Switch adcontroller level2 and 3 in advertorials

- MAINT: Add modernizr tests for CSS support of vh + vw unit

- FIX: Redirect legacy keyword urls regardless of ~/index postfix

- MAINT: Make microsites per banner_id value possible

- ZON-1611: Popover


2.5.1 (2015-09-22)
------------------

- FIX: Compute proper liveblog status


2.5 (2015-09-21)
----------------

- MAINT: Embed liveblogs using ESI

- ZON-2227: Mask nextread date for google

- ZON-2204: Pin version of bxslider to 4.2.3 to prevent bug in 4.2.4+

- FIX: Ignore missing meta files for content linked from articles

- FIX: Print table of contents before the first paragraph only
