@@ -6,7 +6,6 @@
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published_semantic">2013-10-04T20:26:11.048031+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="uuid">{urn:uuid:228ed8a6-16a7-4cc9-b0c7-74c675b2f67b}</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published">2013-10-04T20:27:00.135886+00:00</attribute>
-  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="released_to">2014-01-03T21:28:07+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="retract_job_id">777717287</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="last_modified_by">ldap.stroebele</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/image" name="master_image">30921833.jpg</attribute>
