@@ -18,7 +18,6 @@
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="date_last_checkout">2014-10-28T13:03:56.543534+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="uuid">{urn:uuid:fed2bd16-62f6-4e1f-8af8-d5a0d72279c5}</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published_semantic">2014-10-28T13:03:49.864253+00:00</attribute>
-  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="released_to">2015-01-28T13:03:50+00:00</attribute>
   <attribute ns="DAV:" name="resourcetype"/>
   <attribute ns="DAV:" name="creationdate">2014-10-28T13:04:03Z</attribute>
   <attribute ns="DAV:" name="getlastmodified">Tue, 28 Oct 2014 13:04:03 GMT</attribute>
