@@ -15,7 +15,6 @@
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="last-semantic-change">2014-04-15T07:53:23.299150+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published_semantic">2014-04-15T07:59:59.395766+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="published">yes</attribute>
-  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="released_to">2014-05-17T07:59:27+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="retract_job_id">1684361680</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/image" name="caption">Der Fr&#xFC;hling ist ein sch&#xF6;ner Anlass, endlich mal wieder viel zu essen</attribute>
   <attribute ns="DAV:" name="resourcetype"/>
