@@ -5,7 +5,6 @@
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="uuid">{urn:uuid:6def7004-e2e9-40d5-b8d1-fa05641ee505}</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="date_first_released">2014-04-15T08:10:19.927924+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published_semantic">2014-04-15T08:09:33.683848+00:00</attribute>
-  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="released_to">2014-05-17T08:09:14+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/image" name="master_image">silvio.jpg</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="last_modified_by">ldap.bischoff</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="date_last_published">2014-04-15T08:10:19.927924+00:00</attribute>
