@@ -16,7 +16,6 @@
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="published">yes</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="title">Sonnenfinsternis</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/image" name="master_image">dpa Picture-Alliance-56833438-HighRes.jpg</attribute>
-  <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="released_to">2015-06-20T09:21:29+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="date_first_released">2015-03-20T10:22:34.495312+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/document" name="date_last_checkout">2015-03-20T10:25:06.336093+00:00</attribute>
   <attribute ns="http://namespaces.zeit.de/CMS/workflow" name="retract_job_id">291387885</attribute>
