@@ -1,3 +1,4 @@
+import mock
 import zope.testbrowser.wsgi
 
 import zeit.cms.interfaces
@@ -31,3 +32,12 @@ def test_can_access_category(application):
         'http://xml.zeit.de/newsletter/februar')
     category = zeit.newsletter.interfaces.INewsletterCategory(newsletter)
     assert category.subject == 'ZEIT ONLINE Newsletter'
+
+
+def test_newsletter_does_not_render_image_if_expired(application):
+    b = zope.testbrowser.wsgi.Browser(wsgi_app=application)
+    with mock.patch('zeit.web.core.image.is_image_expired') as expired:
+        expired.return_value = True
+        b.open('http://localhost/newsletter/februar')
+    assert ('http://www.zeit.de/exampleimages/artikel/01/schoppenstube'
+            not in b.contents)
